log
Wed 20 Mar 2024 11:49:22 PM UTC: 
 tests:  0|5
total_score: 0/70
f595a11
Wed 20 Mar 2024 11:53:07 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
de28953
Wed 20 Mar 2024 11:53:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:5: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |     pushback(L, dato);
      |     ^~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
7d1fe39
Wed 20 Mar 2024 11:53:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
f86fc60
Wed 20 Mar 2024 11:55:39 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
c45121a
Wed 20 Mar 2024 11:58:26 PM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  3|2
total_score: 40/70
19d56c2
Thu 21 Mar 2024 01:11:15 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
62f3875
Thu 21 Mar 2024 01:13:19 AM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:10: error: ‘pAux’ undeclared (first use in this function); did you mean ‘pA’?
  104 |     push(pAux, dato);
      |          ^~~~
      |          pA
exercises.c:104:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:107:21: error: ‘pAu’ undeclared (first use in this function); did you mean ‘pA’?
  107 |   while((dato = pop(pAu)) != NULL) {
      |                     ^~~
      |                     pA
exercises.c:100:10: error: unused variable ‘pA’ [-Werror=unused-variable]
  100 |   Stack* pA= create_stack();
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
b092fbc
Thu 21 Mar 2024 01:13:29 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:10: error: ‘pAux’ undeclared (first use in this function); did you mean ‘pAx’?
  104 |     push(pAux, dato);
      |          ^~~~
      |          pAx
exercises.c:104:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:100:10: error: unused variable ‘pAx’ [-Werror=unused-variable]
  100 |   Stack* pAx= create_stack();
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
3552f04
Thu 21 Mar 2024 01:13:41 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
51edfbf
